<resources>
    <string name="app_name">Smart Shopper</string>
    <!--    Bottom Navigation -->
    <string name="settings">Settings</string>
    <string name="notes">Notes</string>
    <string name="shop_list">Shop List</string>
    <string name="item">Add</string>
    <!-- Fragment -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="time">Time</string>
    <!-- Note -->
    <string name="title_hint">Title</string>
    <string name="content_hint">Content</string>
    <string name="save">Save</string>
    <string name="bold_style">Make Bold</string>
    <string name="change_color">Change color</string>
    <string name="delete_image_description">Delete the note</string>
    <!-- Picker Color content -->
    <string name="img_back">Black color</string>
    <string name="img_blue">Blue color</string>
    <string name="img_green">Green color</string>
    <string name="img_yellow">Yellow color</string>
    <string name="img_red">Red color</string>
    <string name="img_orange">Orange color</string>
    <!-- Shopping List -->
    <string name="shopping_list_name">Please write list name</string>
    <string name="hit_list_name">List name</string>
    <string name="add_list_button">Add</string>
    <string name="delete_shopping_list">Delete shopping list</string>
    <string name="edit_shopping_list">Edit shopping list</string>
    <string name="empty_shopping_list">Empty</string>
    <string name="warning_dialog">Warning</string>
    <string name="confirm_delete">Delete</string>
    <string name="cancel_delete">Cancel</string>
    <string name="warning_message">Delete this shopping list?</string>
    <string name="delete_button">Delete</string>
    <string name="cancel_button">Cancel</string>
    <string name="rename_shopping_list">Enter a new name</string>
    <string name="update_button">Update</string>
    <!-- Shopping List Menu -->
    <string name="delete_shopping_list_item">Delete list</string>
    <string name="share_shopping_list_item">Share list</string>
    <string name="clear_shopping_list_item">Clear list</string>
    <string name="save_shopping_list_item">Save list</string>
    <string name="add_shopping_list_item">Add list</string>
    <!-- Shopping Item -->
    <string name="edit_item">Edit</string>
    <string name="edit_library_item">Edit</string>
    <string name="delete_library_item">Delete</string>
    <string name="item_change">Change item</string>
    <string name="item_name_hint">Name</string>
    <string name="item_info_hint">Info</string>
    <string name="item_update_button">Save changes</string>
    <!-- Settings-->
    <string name="general_settings">General Settings</string>
    <string name="style_note">Note style</string>
    <string name="time_format">Time format</string>
    <string name="ads">Remove ads</string>
    <string name="ads_summary">Remove all ads from this app</string>
    <string name="text_size">Title text size</string>
    <string name="text_size_content">Content text size</string>
    <string name="text_settings">Text Settings</string>

</resources>
