<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory android:title="@string/general_settings">

        <ListPreference
            android:defaultValue="1"
            android:entries="@array/note_style_array"
            android:entryValues="@array/note_style_values"
            android:key="note_style_key"
            android:title="@string/style_note"
            app:useSimpleSummaryProvider="true"
            app:icon="@drawable/ic_note_style" />
        <ListPreference
            android:defaultValue="1"
            android:entries="@array/time_format_array"
            android:entryValues="@array/time_format_values"
            android:key="time_format_key"
            android:title="@string/time_format"
            app:useSimpleSummaryProvider="true"
            app:icon="@drawable/ic_time_format" />
        <Preference
            android:icon="@drawable/ic_remove_ads"
            android:summary="@string/ads_summary"
            android:title="@string/ads" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/text_settings">

        <ListPreference
            android:defaultValue="1"
            android:entries="@array/text_size_array"
            android:entryValues="@array/text_size_values"
            android:key="title_text_key"
            android:title="@string/text_size"
            app:useSimpleSummaryProvider="true"
            app:icon="@drawable/ic_text_size" />
        <ListPreference
            android:defaultValue="1"
            android:entries="@array/text_size_array"
            android:entryValues="@array/text_size_values"
            android:key="content_text_key"
            android:title="@string/text_size_content"
            app:useSimpleSummaryProvider="true"
            app:icon="@drawable/ic_content" />
    </PreferenceCategory>
</androidx.preference.PreferenceScreen>