<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/deleteShoppingItem"
        android:title="@string/delete_shopping_list_item" />
    <item
        android:id="@+id/shareShoppingItem"
        android:title="@string/share_shopping_list_item" />
    <item
        android:id="@+id/clearShoppingItem"
        android:title="@string/clear_shopping_list_item" />
    <item
        android:id="@+id/saveShoppingItem"
        android:icon="@drawable/ic_save"
        android:orderInCategory="2"
        android:title="@string/save_shopping_list_item"
        app:showAsAction="always" />
    <item
        android:id="@+id/addShoppingItem"
        app:actionLayout="@layout/shopping_list_edit_text"
        android:icon="@drawable/ic_item"
        android:orderInCategory="1"
        android:title="@string/add_shopping_list_item"
        app:showAsAction="always|collapseActionView" />
</menu>
