<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/notes"
        android:icon="@drawable/ic_notes"
        android:title="@string/notes"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/shopList"
        android:icon="@drawable/ic_shop_list"
        android:title="@string/shop_list"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/add"
        android:icon="@drawable/ic_item"
        android:title="@string/item"
        app:showAsAction="ifRoom" />

</menu>